--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,10 @@
 spring.application.name=productsApp
 server.port = 8080
-#spring.datasource.url=jdbc:h2:mem:productsDB
-#spring.h2.console.enabled=true
+spring.datasource.url=jdbc:h2:mem:productsDB
+spring.h2.console.enabled=true
 
-spring.datasource.url=jdbc:postgresql://localhost:5455/productsdb
-spring.datasource.username=owner
-spring.datasource.password=ownerpw
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+#spring.datasource.url=jdbc:postgresql://localhost:5455/productsdb
+#spring.datasource.username=owner
+#spring.datasource.password=ownerpw
+#spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
